[gd_scene load_steps=7 format=3 uid="uid://r4x0ip5jsgxd"]

[ext_resource type="Script" path="res://main.gd" id="1_0gjnb"]
[ext_resource type="PackedScene" uid="uid://b0uxagn01udow" path="res://wall.tscn" id="1_s658f"]
[ext_resource type="PackedScene" uid="uid://bswuocc8aa3rt" path="res://ball.tscn" id="2_mhke0"]
[ext_resource type="PackedScene" uid="uid://fgi03kncecb5" path="res://border.tscn" id="4_35ior"]
[ext_resource type="Script" path="res://score_display.gd" id="5_1ejo3"]

[sub_resource type="BoxMesh" id="BoxMesh_wefp3"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0gjnb")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="background" type="MeshInstance2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(-8.58307e-05, 3.8743e-06)
scale = Vector2(1920, 1080)
mesh = SubResource("BoxMesh_wefp3")

[node name="wallLeft" parent="." instance=ExtResource("1_s658f")]
position = Vector2(-900, 0)

[node name="wallRight" parent="." instance=ExtResource("1_s658f")]
position = Vector2(900, 0)
player = 2

[node name="ball" parent="." instance=ExtResource("2_mhke0")]
scale = Vector2(4, 4)
collision_mask = 13

[node name="borderTop" parent="." groups=["bordersTopBottom"] instance=ExtResource("4_35ior")]
position = Vector2(0, -608.26)
scale = Vector2(19.4942, 1.35795)

[node name="borderBottom" parent="." groups=["bordersTopBottom"] instance=ExtResource("4_35ior")]
position = Vector2(0, 605.365)
scale = Vector2(19.4942, 1.35795)

[node name="borderLeft" parent="." groups=["bordersLeftRight"] instance=ExtResource("4_35ior")]
position = Vector2(-1010.82, 0)
scale = Vector2(1, 11.413)
collision_layer = 8

[node name="borderRight" parent="." groups=["bordersLeftRight"] instance=ExtResource("4_35ior")]
position = Vector2(1007.09, 0)
scale = Vector2(1, 11.413)
collision_layer = 8

[node name="scoreDisplay" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -29.665
offset_top = -538.0
offset_right = 127.335
offset_bottom = -386.0
grow_horizontal = 0
scale = Vector2(0.38, 0.38)
theme_override_font_sizes/font_size = 111
text = "0:0"
horizontal_alignment = 1
script = ExtResource("5_1ejo3")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="timeDisplay" type="Label" parent="."]
offset_left = -959.0
offset_top = -539.0
offset_right = -919.07
offset_bottom = -515.42
scale = Vector2(0.14, 0.14)
theme_override_font_sizes/font_size = 246

[node name="endScoreDisplay" type="Label" parent="."]
visible = false
offset_left = -38.0
offset_top = -43.0
offset_right = 197.0
offset_bottom = 184.0
scale = Vector2(0.32, 0.32)
theme_override_font_sizes/font_size = 166
text = "
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="resetPauseTimer" type="Timer" parent="."]
process_mode = 3
wait_time = 0.5
one_shot = true

[connection signal="new_ball_needed" from="." to="ball" method="_on_main_new_ball_needed"]
[connection signal="out_of_bounds" from="ball" to="." method="_on_ball_out_of_bounds"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="resetPauseTimer" to="." method="_on_reset_pause_timer_timeout"]
